--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,57 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+html {
+  scroll-behavior: smooth;
+  font-family: 'Raleway', sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@layer base {
   body {
-    color: white;
-    background: black;
+    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
   }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-bold
+  }
+
+  h1 {
+    @apply text-4xl sm:text-5xl md:text-6xl font-[Raleway]
+  }
+
+  h2 {
+    @apply text-3xl sm:text-4xl
+  }
+  
+  li {
+    @apply cursor-pointer
+  }
+
+  button {
+    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
+  }
+
+  h1 span {
+    transition: .5s linear;
+  }
+
+  h1:hover span:nth-child(1){
+    margin-left: 5px;
+
+  }
+  h1:hover span:nth-child(2){
+    margin-left: 5px;
+
+  }
+
+  h1:hover span {
+    color: fff;
+    text-shadow: 0 0 10px rgb(162, 228, 242),
+    0 0 20px rgb(67, 224, 239),
+    0 0 40px rgb(158, 238, 254)
+
+  }
+
 }
